@@ -1,5 +1,6 @@
 Version 2.01.11 - 
 ==============================
+  Fix loopfiles alias alloc & mem debugging.
   Un-inline dbg_strdup.
   lv_reduce tidying.
   Remove some unnecessary parameters.
